--- a/about.html
+++ b/about.html
@@ -465,7 +465,7 @@ Dolore dolores asperiores doloremque eos
 
 <section class="footer">
 <h4>About Us</h4>
-<p>>Our primary goal is to help small Businesses acquire both Local and Foriegn customers. 
+<p>Our primary goal is to help small Businesses acquire both Local and Foriegn customers. 
     We act as a middlema between your business <br> and your prospective client!</p>
      <div class="icon">
         <i class="fa fa-star"></i>
