--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
         <a href="#">premium</a>
     </li>
     <li>
-        <a href="#">business +</a>
+         <a href="#">business +</a>
         <ul>
             <li>
-                <a href="#">html</a>
+                <a href="Categories.html">categories</a>
             </li>
+            
             <li>
                 <a href="#">css</a>
             </li>
