--- a/blog.html
+++ b/blog.html
@@ -450,12 +450,12 @@ background: #f0f0f0;
             <li>
                 <a href="#">premium</a>
             </li>
+              <a href="#">business +</a>
+        <ul>
             <li>
-                <a href="#">business +</a>
-                <ul>
-                    <li>
-                        <a href="#">html</a>
-                    </li>
+                <a href="Categories.html">categories</a>
+            </li>
+            
                     <li>
                         <a href="#">css</a>
                     </li>
