--- a/about.html
+++ b/about.html
@@ -355,12 +355,11 @@ padding: 100px 0;
             <li>
                 <a href="#">premium</a>
             </li>
+             <a href="#">business +</a>
+        <ul>
             <li>
-                <a href="#">business +</a>
-                <ul>
-                    <li>
-                        <a href="#">html</a>
-                    </li>
+                <a href="Categories.html">categories</a>
+            </li>
                     <li>
                         <a href="#">css</a>
                     </li>
